--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					/>
 					<h3 class="header">How did we do?</h3>
 
-					<p class="content">
+					<p class="contentgit">
 						Please let us know how we did with
 						your support request. All feedback
 						is appreciated to help us improve
